# Lottery-System

./: .gitignore  .npmrc  README.md  index.html  main.js  package-lock.json  package.json  renderer.js  vite.config.js
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/styles/: main.css
